added lionicon and a favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="Description" content="Everything you need for your happy little ones.">
   <base href="/">
+  <link rel="icon" type="image/png" href="/assets/favicon.png" sizes="32x32">
 
   <style>
     html,
