change page transition

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     }
 
     simplr-router-container[entering-view] {
-      transform: translateX(-100%);
+      transform: translateY(-100%);
     }
 
     simplr-router-container[leaving-view] {
-      transform: translateX(100%);
+      transform: translateY(100%);
     }
   </style>
   <title>Happy Little Ones</title>
